k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-service
spec:
  selector:
    app: crm-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP
